fix rendering crash sub android 26+